#lesson-3 add basket

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <header class="header">
         <h1 class="header-title">eShop</h1>
-        <button class="btn-cart" type="button">Корзина</button>
+        <div class="basket-wrp">
+            <button class="btn-cart btn" type="button">Корзина</button>
+            <div class="basket"></div>
+        </div>
     </header>
     <main>
         <div class="products"></div>
