--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <header class="header">
         <h1 class="header-title">eShop</h1>
         <div class="basket-wrp">
+
+            <form action="#" class="search-form">
+                <input type="text" class="search-field">
+                <button class="btn-search" type="submit">
+                    <i class="fas fa-search"></i>
+                </button>
+            </form>
+
             <button class="btn-cart btn" type="button">Корзина</button>
             <div class="basket"></div>
         </div>
@@ -18,6 +26,7 @@
     <main>
         <div class="products"></div>
     </main>
+    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
